--- a/keep-vue/package.json
+++ b/keep-vue/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cos-js-sdk-v5": "^1.3.8",
     "element-ui": "^2.15.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
