--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,8 @@ spring:
 mybatis:
   type-aliases-package: com.example.keep.entity
   mapper-locations: classpath:mapper/*Mapper.xml
+
+pagehelper:
+  reasonable: true
+  support-methods-arguments: true
+  helper-dialect: mysql
